--- a/web/src/style.css
+++ b/web/src/style.css
@@ -11,8 +11,8 @@
   -moz-osx-font-smoothing: grayscale;
   font-family: Arial, Helvetica, sans-serif;
 
-  color: #ffffffde;
-  background-color: #242424;
+  color: #242424;
+  background-color: #ffffff;
   --bg-color-menu: #f5f6f7;
   --bg-color-menu-hover: #f9f9f9;
   --bd-color: #dadbdc;
@@ -125,6 +125,7 @@ body {
 .btn-mini {
   padding: 0.1rem 0.5rem !important;
 }
+
 @media (prefers-color-scheme: dark) {
   :root {
     color: #cecece;
