--- a/web/src/style.css
+++ b/web/src/style.css
@@ -27,7 +27,7 @@ body {
   place-items: center;
   width: 100%;
   height: 100%;
-  min-width: 1500px;
+  /* min-width: 1500px; */
   overflow-y: hidden;
 }
 
