--- a/web/src/style.css
+++ b/web/src/style.css
@@ -134,7 +134,7 @@ body {
     --bg-color-menu: #323232;
     --bg-color-menu-hover: #5c5c5c;
     --bd-color: #444444;
-    --bg-color-selected: #252e54;
+    --bg-color-selected: #252c50;
 }
   a:hover {
     color: #91c9fd;
