--- a/web/src/style.css
+++ b/web/src/style.css
@@ -16,7 +16,7 @@
   --bg-color-menu: #f5f6f7;
   --bg-color-menu-hover: #f9f9f9;
   --bd-color: #dadbdc;
-  --bg-color-selected: #c2d6e7;
+  --bg-color-selected: #d6ecfe;
 
   font-size: 14px;
 }
